welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: Boolean does not take parameters
  while (!fonctionTest()) {
                      ^