welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  var fonctionTest:Boolean=false
  while (!fonctionTest()) {
    if (estFaceMur()){
      if (getDirection() == Direction.EST){
        gauche()
        if (estFaceMur()){
          fonctionTest=true
        } else {
          avance()
          gauche()
        }
      }
      if (getDirection() == Direction.OUEST){
        droite()
        if (estFaceMur()){
          fonctionTest=true
        } else {
          avance()
          droite()
        }
      }
    }
    avance()
  }
}